<resources>
    <string name="app_name">Closer to the Stars</string>
    <string name="errorMsg">Ooops..something went wrong, check your Internet connection.</string>
    <string name="no_connection_msg">Please check your Internet connection and refresh the page.</string>
    <string name="no_connection_msg_download">Please check your Internet connection and try again.</string>
    <string name="no_connection_msg_preferences">Please check your Internet connection and then refresh the main page.</string>
    <string name="playButtonText">Play Video</string>
    <string name="share_chooser_text">Share the content</string>
    <string name="download_folder_error">Error: the directory was not created.</string>

    <string name="action_help">Help</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_description">Description</string>
    <string name="action_download">Download</string>
    <string name="action_share">Share</string>

    <string name="with_permission">Thank you for the permission.</string>
    <string name="without_permission">You can\'t download the pictures without this permission.</string>

    <string name="mock_title">Loading title&#8230;</string>

    <string name="main_picture_image_description">Main Picture</string>
    <string name="grid_item_image_description">Gallery Picture</string>


    <string name="random_pictures_label">Load random pictures</string>
    <string name="latest_pictures_label">Load the latest pictures</string>

    <string name="random_pictures_value">Load random pictures</string>
    <string name="latest_pictures_value">Load the latest pictures</string>

    <string name="pref_loading_key">loading_preference</string>
    <string name="pref_loading_label">Loading preference</string>

    <string name="pref_size_key">size_preference</string>
    <string name="pref_size_default_value">15</string>
    <string name="pref_size_label">Size of the gallery</string>

    <string name="size_warning">Showing a higher amount of pictures may result in a longer loading.</string>
    <string name="size_error">You have to enter a whole number between 1 and 50.</string>
    <string name="size_format_error">You have to enter a whole number between 1 and 50.</string>

    <string name="portrait_layout_tag">portrait_layout</string>
    <string name="landscape_layout_tag">landscape_layout</string>
    <string name="tablet_portrait_layout_tag">tablet_portrait_layout</string>
    <string name="tablet_landscape_layout_tag">tablet_landscape_layout</string>

    <string name="guide_intro">User guide:</string>

    <string name="guide_refresh">If there is a network problem or you wish to re-load the gallery click on this button.</string>
    <string name="guide_refresh_image">refresh icon guide</string>

    <string name="guide_settings">The settings button helps you customize the content - you can set
    a loading preference (the latest or random pictures) as well as the size of the gallery below
    the main picture.</string>
    <string name="guide_settings_image">settings icon guide</string>

    <string name="guide_description">This button shows the image description. If you wish to hide
    the description drag it simply down.</string>
    <string name="guide_description_image">description icon guide</string>

    <string name="guide_download">You can download a picture using this button. The picture will be
    saved in your phone\'s gallery in a specific folder that is created automatically with the first
    download.</string>
    <string name="guide_download_image">download icon guide</string>

    <string name="guide_share">Do you like the showed content? Share it with your friends!</string>
    <string name="guide_share_image">share icon guide</string>

    <string name="master_picture_click">Features available when you click on the main picture:</string>
    <string name="fullscreen_mode_toggle">You can toggle the fullscreen mode by clicking on the picture
    on the detail page.</string>


</resources>
